Add AICC prerequisite parsing and metadata support
Introduces classes for parsing AICC prerequisite expressions and nodes, and adds corresponding metadata output types. Improves documentation and code comments across file access and module detection implementations. Updates tests and resources to cover complex AICC scenarios.